2009-04-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImages): Deal slightly better with the
	case when MogrifyImage() expands one image into several.  Still
	don't know of a sane way to deal with -crop WIDTHxHEIGHT.

	* magick/transform.c (TransformImage): Image which is updated may
	be a list so account for that.

	* configure.ac: Add a test for the 'restrict' keyword so that
	eventually we can use it.

	* coders/jpeg.c (ReadJPEGImage): Tidy JPEG reader by moving JPEG
	properties analysis code into subroutines.

2009-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/display.imdoc: Fix documentation for crop and chop keyboard
	accelerators.  Fixes SourceForge bug #2593388 "error in the
	documentation/Keyboard accelarators".

2009-04-20  Glenn Randers-Pehrson <glennrp@simple....>

        * coders/png.c: Cosmetic-only, change "True" to "MagickTrue" or
          "MagickPass" and "False" to "MagickFalse" or MagickFail".

2009-04-20  Glenn Randers-Pehrson <glennrp@simple....>

        * coders/png.c: Check error return from CompressColormapTransFirst()

2009-04-20  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/png.c: Refrain from modifying image struct
          members (matte, colors, depth) while writing a PNG.

2009-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Document the direction of rotation.

2009-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogMagickEventList): Use MagickPackageName from
	version.h rather than hard-coding "GraphicsMagick".

2009-04-18  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/jpeg.c: Fixed a warning about "shadowed" variables.

2009-04-17  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/png.c: Fixed some warnings about "shadowed" variables.

2009-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add tests for some reentrant versions of functions