@@ -1,3 +1,9 @@
+2009-05-01  Glenn Randers-Pehrson <glennrp@simple....>
+
+        * coders/png.c (WriteOnePNGImage and WriteOneJNGImage):
+        Changed internal attribute png_bit_depth to png:bit_depth_written
+        to avoid confusion with planned new public png:bit_depth attribute.
+
 2009-04-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c (MogrifyImages): Deal slightly better with the
